# cellscape

./: .gitignore  CITATION.bib  LICENSE  ParseUniprotXML.py  README.md  compose_scene.py  parse_uniprot_xml.py  pdb2svg.py  protein2outline.py  protein_to_2d.py  representative_shape.py  requirements.txt  scene.py  schema.json  setup.cfg  setup.py  todo.md
cellscape/: __init__.py  __main__.py  cartoon.py  cli.py  compose_scene.py  interface.py  jupyter.py  parse_alignment.py  parse_uniprot_xml.py  pdb2svg.py  scene.py  structure.py  util.py
data/: ceacam.fasta  ceacam.xml
examples/: cartoon.ipynb
examples/ceacam5/: P06731.xml  domains.csv  view.txt
examples/ig/: view
