[metadata]
name = cellscape
version = 0.0.0
author = Jordi Silvestre-Ryan
description = todo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jordisr/cellscape
project_urls =
    Bug Tracker = https://github.com/jordisr/cellscape/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = cellscape
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    shapely<1.8
    biopython>=1.75
    nglview

[options.entry_points]
console_scripts =
    cellscape = cellscape.__main__:main

[options.packages.find]
where = cellscape